--- a/ionic.config.json
+++ b/ionic.config.json
@@ -6,8 +6,7 @@
   "type": "angular",
   "proxies": [
     {
-      "path": "/megasena",
-      "proxyUrl": "http://127.0.0.1:8000/megasena"
+      "proxyUrl": "http://apploteria.sa-east-1.elasticbeanstalk.com/core/"
     }
   ]
 }
